syntax = "proto3";

package pb;

import "personInfo_msg.proto";
import "exist_crud_service_msg.proto";

option  go_package = "./pb";

// Creating RPC endpoints
service ExistCRUDService {
  rpc AddNewPerson(PersonInfoRequest) returns (Response) {}
  rpc UpdatePersonInfo(EditPersonInfoParameters) returns (Response) {}
  rpc FindPersonInfo(NationalIDNumber) returns (PersonInfoResponse) {}
}